2011-02-22  Christopher Roy Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/keymaps.jl
	* lisp/sawfish/wm/tabs/tabgroup.jl: remove tab-raise-on-hover and
	maybe-raise-tab. Instead make, what was tab-raise-on-hover the
	predefined behaviour.

	* lisp/sawfish/wm/tabs/tabgroup.jl: improved tab-refresh-group, added
	support for maximized/unmaxmized, focus-mode, gravity, sticky-viewport
	and never-maximize. Small fix for before-move-resize [fuchur]

	* KEYBINDINGS: small update

2011-02-21  Christopher Roy Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/tabs/tabgropu.jl: make opaque move and
	resize animator work with tabbed windows. Improved various functions
	tab-refresh-group, tab-group-window, tab-put-window-in-group [fuchur]

	* po/sawfish.pot: updated

2011-02-20  Christopher Roy Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/edge/hot-spot.jl: small string-change

	* lisp/sawfish/wm/autoload.jl
	* lisp/sawfish/wm/keymaps.jl
	* lisp/sawfish/wm/tabs/tabgroup.jl: add maybe-raise-tab-function,
	rather than using a lambda in tabbar keymap (no tooltip then)

	* KEYBINDINGS: updated

	* man/sawfish.texi: added doc for toggle-or-exec
	                    EdgeActions docs
	                    - EdgeFlip
			    - ViewportDrag
			    - HotSpots
			    - example configuration
			    -- (complete, but not perfect)

2011-02-19  Christopher Roy Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/edge/actions.jl
	* lisp/sawfish/wm/edge/utils.jl: improved two strings

	* lisp/sawfish/wm/frames.jl
	* lisp/sawfish/wm/tabs/tabgroup.jl: renamed adjustment-title to
	adjust-title

2011-02-18  Christopher Roy Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/workspace.jl
	* lisp/sawfish/wm/tabs/tabgroup.jl: - support tabbed windows in
	send-to/copy-to-next/previous-workspace
	- add tab-group-window-index function
	- don't add a window to tabgroup, if it already exists on another
	workspace
	-- [fuchur]

	* lisp/sawfish/wm/keymaps.jl: more natural keymap for raise-lower-button