@@ -1,3 +1,8 @@
+2011-02-28  Christopher Roy Bratusek <zanghar@freenet.de>
+	* themes/StyleTab/theme.jl: Fixed crash when changing style
+	on-the-fly (by improving keybindings (gaols and internal commands
+	do now have different names). Renamed the hash-tables. [fuchur]
+
 2011-02-22  Christopher Roy Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/wm/keymaps.jl
 	* lisp/sawfish/wm/tabs/tabgroup.jl: remove tab-raise-on-hover and
